# cms-medpoint

./: .env  CMakeLists.txt  package-lock.json  package.json  server.js  tsconfig.json
.github/workflows/: deploy.yml
src/: App.test.tsx  App.tsx  Header.tsx  react-app-env.d.ts  supabaseclient.ts
src/components/: TextInput.tsx  supabaseClient.ts
src/components/Auth/: Login.tsx
src/components/Dashboard/: Dashboard.tsx
src/pages/: dashboard.css  dashboard.tsx  login.css  login.tsx
